             SCALE_FACTOR settings support for PostScript output (requires pslib - http://pslib.sourceforge.net/
             and makes advantage of PLplot fixes introduced in PLplot 5.9.9)
           - memory leak fix (bug introduced in the previous version)
           - various testsuite & docs updates (incl. docs and examples for CALL_EXTERNAL)
	   - fix in WordExp() when filename argument contain whitespaces (useful in various cases, including 
	     OPENR/W, FILE_MKDIR, ...) [AC 2012/01/04: not finished :( 
	   - !version.os now in lower case for Linux and Darwin

0.9.3:
	   - activities on speed improvements continuing
	   - Initial import of STRMATCH()
	   - Initial import of USERSYM
	   - SCOPE_VARFETCH (only LEVEL keyword supported)
	   - keyword /NaN for HISTOGRAM
	   - Initial import of LUDC, LUSOL and DETERM, OK now only for DOUBLE
	   - Initial import of ROT, CONGRID and BILINEAR
	   - Initial import of TV for PS output
	   - fix in RANDOMN/RANDOMU (Binomial OK, conflicting keywords detected ...)
           - Initial import for QROMB(), QSIMP() (based on QROMB) and QROMO()
           - Initial import for TRISOL()
	   - fix in ERASE for background color (preparing Coyote lib. support)
	   - Initial import of STANDARDIZE and HIST_EQUAL
	   - improvment in MAGICK related codes, especially MAGICK_PING (pb with ImageMagick (IM) in Ubuntu 12.04; GraphicsMagick can also be used instead of IM)
	   - FZ_ROOTS: initial import (same way than IMSL_ZEROPOLY using gsl_poly_complex_solve(), only real coefs. for input poly)
	   - FX_ROOT: initial import. in c++
           - keyword DIM in MOMENT(), MEAN(), STDDEV(), VARIANCE(), SKEWNESS(), KURTOSIS() (requested DIM and other improvments)
           - keyword SIGN in FINITE
	   - support for empty arrays and !NULL system variable
	   - promotion of FOR loop index variable type
	   - various improvments on READ_JPEG, READ_PNG, WRITE_JPEG, WRITE_PNG
	   - keyword ICONIC in WSHOW
	   - keyword ISOTROPIC in PLOT, CONTOUR