@@ -182,6 +182,32 @@ public:
   void SetSelectOff();
 };
 
+// list widget **************************************************
+class GDLWidgetList : public GDLWidget
+{
+public:
+  GDLWidgetList( WidgetIDT p, BaseGDL *uV, BaseGDL *value,
+								 DLong xSize, DLong ySize, DLong style);
+  void SetSelectOff();
+};
+
+// bgroup widget **************************************************
+class GDLWidgetBGroup: public GDLWidget
+{
+public:
+	typedef enum e_BGroupMode {NORMAL, EXCLUSIVE, NONEXCLUSIVE}
+	BGroupMode;
+	typedef enum e_BGRoupReturn {RETURN_ID, RETURN_INDEX, RETURN_NAME}
+	BGroupReturn;
+
+	GDLWidgetBGroup(WidgetIDT p, DStringGDL* names,
+									BaseGDL *uV, DStringGDL buttonuvalue,
+									DLong xSize, DLong ySize,
+									DString labeltop, DLong rows, DLong cols,
+									BGroupMode mode, BGroupReturn ret
+									);
+
+};
 
 // text widget **************************************************
 class GDLWidgetText: public GDLWidget
@@ -191,7 +217,7 @@ private:
 
 public:
   GDLWidgetText( WidgetIDT parentID, BaseGDL *uvalue, DString value,
-		 DLong xSize);
+								 DLong xSize, bool editable);
  
   void SetTextValue( DString);
 };
